--- a/String inside the function.ipynb
+++ b/String inside the function.ipynb
@@ -1,8 +1,49 @@
-def reverse_string(input_str):
-    return input_str[::-1]
-
-# Example usage
-sample_string = "1234abcd"
-result = reverse_string(sample_string)
-print(result)
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a538fdb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dcba4321\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_string(input_str):\n",
+    "    return input_str[::-1]\n",
+    "\n",
+    "# Example usage\n",
+    "sample_string = \"1234abcd\"\n",
+    "result = reverse_string(sample_string)\n",
+    "print(result)\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
